processor/src/test/resources/model/good/ParentModel.java
package io.logansquarex.processor;

import io.logansquarex.core.annotation.JsonField;
import io.logansquarex.core.annotation.JsonObject;

@JsonObject
public class ParentModel {

    @JsonField
    public int parentTestInt;

}
