processor/src/test/resources/model/bad/FieldWithoutObjectModel.java
package io.logansquarex.processor.bad;

import io.logansquarex.core.annotation.JsonField;

public class FieldWithoutObjectModel {

    @JsonField
    public String string;

}
